--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "framer-motion": "^12.0.0-alpha.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.381.0",
-    "next": "^15.1.9",
+    "next": "^15.5.0",
     "next-themes": "^0.3.0",
     "next-view-transitions": "^0.2.0",
-    "prismjs": "^1.29.0",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.51.5",
@@ -53,7 +53,7 @@
     "next-view-transitions": {
       "react": "^19.0.0",
       "react-dom": "^19.0.0",
-      "next": "^15.1.9"
+      "next": "^15.5.0"
     }
   },
   "devDependencies": {
@@ -61,7 +61,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^15.5.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
