--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-wrap-balancer": "^1.1.1",
     "reading-time": "^1.5.0",
     "remark-gfm": "^4.0.0",
+    "retell-client-js-sdk": "^2.0.7",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
